--- a/css/style.css
+++ b/css/style.css
@@ -368,3 +368,25 @@ ul{padding-left:18px}
   opacity: 0.9;
 }
 
+#banner {
+  width: 100%;
+  height: 280px;
+  background: #f7f7f7;
+  margin: 10px 0 20px;
+  overflow: hidden;
+  border-radius: 10px;
+}
+
+.slide {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  font-size: 22px;
+  font-weight: bold;
+  text-align: center;
+  padding: 20px;
+  background-size: cover;
+  background-position: center;
+  color: white;
+}
